package com.example;

public enum KeyCode {
    A, B, C, D, E, F, G;

    public int toAscii() {
        return 0;
    }
}
