classDiagram
class Keyboard {
  +getKeys() List
  +setKeys(arg0: List) void
  +press(arg0: KeyCode) void
  +getMajorNumber() Integer
  +getMinorNumber() Integer
  +getBufferSize() int
}
class TestClass {
  -visibleField: String
  -hiddenField: String
  +visibleMethod() void
  +hiddenMethod() void
  +getVisibleField() String
  +getHiddenField() String
}
class TestClassRetention {
  -visibleField: String
  -hiddenFieldWithClassRetention: String
  +visibleMethod() void
  +hiddenMethodWithClassRetention() void
}
class IODevice.Network {
  +getMacAddress()* String
  +getState()* IODevice.Network.State
}
<<interface>> IODevice.Network
class Computer.State {
  ON
  OFF
  SLEEP
  -VALUES: Computer.State[]$
  +values()$ Computer.State[]
  +valueOf(arg0: String)$ Computer.State
  -values()$ Computer.State[]
}
<<enumeration>> Computer.State
class Mouse {
  +getMajorNumber() Integer
  +getMinorNumber() Integer
  +getBufferSize() int
}
class SkippedClass {
  -someField: String
  +someMethod() void
}
class IODevice.Character {
  +getBufferSize()* int
}
<<interface>> IODevice.Character
class IODevice.Network.State {
  UP
  DOWN
  -VALUES: IODevice.Network.State[]$
  +values()$ IODevice.Network.State[]
  +valueOf(arg0: String)$ IODevice.Network.State
  -values()$ IODevice.Network.State[]
}
<<enumeration>> IODevice.Network.State
class IODevice {
  +getMajorNumber()* Integer
  +getMinorNumber()* Integer
}
<<abstract>> IODevice
class KeyCode {
  A
  B
  C
  D
  E
  F
  G
  -VALUES: KeyCode[]$
  +values()$ KeyCode[]
  +valueOf(arg0: String)$ KeyCode
  +toAscii() int
  -values()$ KeyCode[]
}
<<enumeration>> KeyCode
class Computer {
  +powerOn() void
  +hibernate() void
  +powerOff() void
  ~modelNumber()$ int
}
Computer "1" --o "1" Keyboard
Computer "1" --o "1" Mouse
Computer "1" --* "1" Computer.State
Keyboard "1" --o "0..*" List : contains
Keyboard --|> IODevice
Keyboard ..|> IODevice.Character
Mouse --|> IODevice
Mouse ..|> IODevice.Character
